--- a/ipynb/5_KPCA_feature_extraction.ipynb
+++ b/ipynb/5_KPCA_feature_extraction.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import roc_auc_score, make_scorer"
+    "from sklearn.metrics import roc_auc_score, make_scorer\n",
+    "from sklearn.metrics import r2_score, mean_squared_error"
    ]
   },
   {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
        "[1 rows x 52 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,21 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "kpca_params = {\n",
     "    'kpca__n_components': np.arange(2, 11, 1),\n",
-    "    'kpca__kernel': ['poly', 'rbf', 'sigmoid', 'cosine'],\n",
+    "    'kpca__kernel': ['rbf', 'sigmoid', 'cosine'],\n",
     "    'kpca__gamma': np.linspace(.1, 1, 10),\n",
-    "    'svr__kernel':['sigmoid', 'poly', 'rbf', 'cosine']\n",
+    "    'svr__kernel':['sigmoid', 'rbf']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,19 +262,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise',\n",
+       "       estimator=Pipeline(steps=[('scaler', StandardScaler(copy=True, with_mean=True, with_std=True)), ('kpca', KernelPCA(alpha=1.0, coef0=1, copy_X=True, degree=3, eigen_solver='auto',\n",
+       "     fit_inverse_transform=False, gamma=None, kernel='linear',\n",
+       "     kernel_params=None, max_iter=None, n_components=None, n_jobs=1,\n",
+       "     ran... epsilon=0.1, gamma='auto',\n",
+       "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False))]),\n",
+       "       fit_params={}, iid=True, n_jobs=-1,\n",
+       "       param_grid={'kpca__n_components': array([ 2,  3,  4,  5,  6,  7,  8,  9, 10]), 'kpca__kernel': ['rbf', 'sigmoid', 'cosine'], 'kpca__gamma': array([ 0.1,  0.2,  0.3,  0.4,  0.5,  0.6,  0.7,  0.8,  0.9,  1. ]), 'svr__kernel': ['sigmoid', 'rbf']},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score=True,\n",
+       "       scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipe_gs.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred = pipe_gs.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean squared error: 0.04\n",
+      "Variance score: 0.53\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The mean squared error\n",
+    "print(\"Mean squared error: %.2f\"\n",
+    "      % mean_squared_error(y_test, y_pred))\n",
+    "# Explained variance score: 1 is perfect prediction\n",
+    "print('Variance score: %.2f' % r2_score(y_test, y_pred))"
+   ]
   },
   {
    "cell_type": "code",
