--- a/ipynb/4_Benchmarking.ipynb
+++ b/ipynb/4_Benchmarking.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jovyan/critical_feature_extraction/ipynb'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -19,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +152,7 @@
        "[1 rows x 52 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +172,8 @@
     "apple = apple.drop('Unnamed: 0.1.1', axis =1)\n",
     "apple = apple.set_index(pd.to_datetime(apple.Date))\n",
     "apple = apple.drop('Date', axis=1)\n",
-    "apple = apple.drop('Name', axis=1)"
+    "apple = apple.drop('Name', axis=1)\n",
+    "apple = apple.sort_index()"
    ]
   },
   {
@@ -173,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,16 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.33, random_state=42)"
+    "#because this is time-series data we must manually split the data \n",
+    "X_train = X.iloc[0:900, :]\n",
+    "y_train = y.iloc[0:900]\n",
+    "X_test = X.iloc[901:, :]\n",
+    "y_test = y.iloc[901:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +240,7 @@
        "  svd_solver='auto', tol=0.0, whiten=False)), ('linreg', LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False))])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,15 +260,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean squared error: 0.02\n",
-      "Variance score: 0.75\n"
+      "Mean squared error: 0.07\n",
+      "Variance score: -2.95\n"
      ]
     }
    ],
