--- a/ipynb/5_Benchmarking.ipynb
+++ b/ipynb/5_Benchmarking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'/home/jovyan/critical_feature_extraction/ipynb'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.manifold import TSNE"
+    "from sklearn.manifold import TSNE\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +153,7 @@
        "[1 rows x 52 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,12 +190,13 @@
     "    - PCA\n",
     "    - Linear Regression\n",
     "3. Fit model\n",
-    "4. Generate Confusion Matrix"
+    "4. Produce scores\n",
+    "5. Visualize the Principal components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +242,7 @@
        "  svd_solver='auto', tol=0.0, whiten=False)), ('linreg', LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False))])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +270,7 @@
      "output_type": "stream",
      "text": [
       "Mean squared error: 0.07\n",
-      "Variance score: -2.95\n"
+      "Explain Variance: -2.95\n"
      ]
     }
    ],
@@ -277,14 +279,12 @@
     "print(\"Mean squared error: %.2f\"\n",
     "      % mean_squared_error(y_test, y_pred))\n",
     "# Explained variance score: 1 is perfect prediction\n",
-    "print('Variance score: %.2f' % r2_score(y_test, y_pred))"
+    "print('Explain Variance: %.2f' % r2_score(y_test, y_pred))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
